<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="java.lang.Boolean" />

        <variable
            name="viewClickHandler"
            type="com.kartum.ui.signup.viewmodel.SignUpViewModel.ViewClickHandler" />

        <variable
            name="viewModel"
            type="com.kartum.ui.signup.viewmodel.SignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@mipmap/signup_box"
                    android:orientation="vertical"
                    android:padding="@dimen/_20sdp">

                    <com.kartum.custom.CMTextView
                        android:id="@+id/tvTitle"
                        style="@style/txt_text_primary_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/st_signup"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:hint="@string/hint_firstname"
                        android:theme="@style/EditTextHint">

                        <com.kartum.custom.CEditTextView
                            android:id="@+id/editFirstName"
                            style="@style/txt_primary_13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_selector_focused"
                            android:maxLines="1"
                            android:paddingTop="@dimen/_8sdp"
                            android:paddingBottom="@dimen/_8sdp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:hint="@string/hint_lastname"
                        android:theme="@style/EditTextHint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editLastName"
                            style="@style/txt_primary_13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_selector_focused"
                            android:maxLines="1"
                            android:paddingTop="@dimen/_8sdp"
                            android:paddingBottom="@dimen/_8sdp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:hint="@string/hint_email_signup"
                        android:theme="@style/EditTextHint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editLoginEmail"
                            style="@style/txt_primary_13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{(editable)->viewModel.afterEmailTextChanged(editable)}"
                            android:background="@drawable/edittext_selector_focused"
                            android:maxLines="1"
                            android:paddingTop="@dimen/_8sdp"
                            android:paddingBottom="@dimen/_8sdp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:hint="@string/hint_mobile"
                        android:theme="@style/EditTextHint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editMobileNumber"
                            style="@style/txt_primary_13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_selector_focused"
                            android:maxLines="1"
                            android:paddingTop="@dimen/_8sdp"
                            android:paddingBottom="@dimen/_8sdp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:hint="@string/password"
                        android:theme="@style/EditTextHint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editLoginPass"
                            style="@style/txt_primary_13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:afterTextChanged="@{(editable)->viewModel.afterPasswordTextChanged(editable)}"
                            android:background="@drawable/edittext_selector_focused"
                            android:maxLines="1"
                            android:paddingTop="@dimen/_8sdp"
                            android:paddingBottom="@dimen/_8sdp"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.kartum.custom.CButtonViewM
                    android:id="@+id/btnSignUp"
                    style="@style/btnStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/btn_bg"
                    android:onClick="@{(v)->viewClickHandler.onRegisterClick(v)}"
                    android:paddingStart="@dimen/_45sdp"
                    android:paddingEnd="@dimen/_45sdp"
                    android:text="@string/st_signup"
                    android:textAllCaps="true"
                    />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp">

                    <View
                        android:layout_width="30dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@color/gray_light" />

                    <com.kartum.custom.CTextView
                        android:id="@+id/tvOr"
                        style="@style/txt_000_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="end"
                        android:singleLine="true"
                        android:text="@string/or" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@color/gray_light" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <LinearLayout
                    android:id="@+id/llSocialSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/tvOr">

                    <ImageView
                        android:id="@+id/ivFBLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7dp"
                        android:onClick="@{(v)->viewClickHandler.onFacebookClick(v)}"
                        android:src="@mipmap/facebook" />

                    <ImageView
                        android:id="@+id/ivGoogleLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:src="@mipmap/google" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/llSocialSignUp">

                    <com.kartum.custom.CTextView
                        style="@style/txt_000_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/already_have_an_account" />

                    <com.kartum.custom.CTextView
                        android:id="@+id/tvSignUp"
                        style="@style/txt_primary_13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:onClick="@{(v)->viewClickHandler.onSignInClick(v)}"
                        android:padding="@dimen/_4sdp"
                        android:singleLine="true"
                        android:text="@string/st_sign_in_reg" />


                </LinearLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>